--- a/lab/tutorials/postgis/templates/page.html
+++ b/lab/tutorials/postgis/templates/page.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block title %}
-{{ title }} - Single city
+{{ name }} - Single city
 {% endblock title %}
 
 {% block content %}
 <h1>{{ name }} (città)</h1>
-<p>La città di {{ title }} si trova nella regione {{ region }}.</p>
+<p>La città di {{ name }} si trova nella regione {{ region }}.</p>
 {% endblock content %}
